--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/Bank_demo?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/bank_demo?useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = dost1234
-
+#docker run -p "3306:3306" -dt --env MYSQL_ALLOW_EMPTY_PASSWORD=true mysql:5.7
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
